# getpaid-example

./: pyproject.toml
example/example/: settings.py
example/myapp/: models.py
example/myapp/migrations/: 0001_initial.py
